--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "Promise": "aleclarson/Promise#1.0.0",
     "Type": "aleclarson/Type#1.0.0",
     "assert": "aleclarson/assert#1.0.0",
-    "getArgProp": "aleclarson/getArgProp#1.0.0",
+    "fromArgs": "aleclarson/fromArgs#1.0.0",
     "git-utils": "aleclarson/git-utils#1.0.0"
   },
   "lotus": {
