--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
     "lotus-coffee"
   ],
   "scripts": {
-    "build": "coffee -cb -o js src",
-    "postinstall": "postinstall-build js 'npm run build'"
+    "build": "coffee-build -v 1.11.x -b -o js src",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "Promise": "aleclarson/Promise#2.0.0",
     "Type": "aleclarson/Type#1.1.0",
-    "git-utils": "aleclarson/git-utils#1.0.0",
-    "postinstall-build": "0.2.x"
-  },
-  "devDependencies": {
-    "coffee-script": "1.9.x"
+    "git-utils": "aleclarson/git-utils#1.0.0"
   }
 }
