--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "git-repo",
   "version": "1.1.0",
-  "main": "js/Repository",
-  "plugins": [
-    "lotus-coffee"
-  ],
+  "main": "lib/Repository.js",
+  "repository": "aleclarson/git-repo",
+  "description": "Git repository class",
   "scripts": {
-    "build": "coffee-build -v 1.11.x -b -o js src",
-    "postinstall": "npm run build"
+    "build": "coffee-build src -o lib"
   },
   "dependencies": {
     "Promise": "aleclarson/Promise#2.2.1",
     "Type": "aleclarson/Type#2.3.1",
     "git-utils": "aleclarson/git-utils#1.2.0"
+  },
+  "devDependencies": {
+    "coffeescript": "^2.3.0"
   }
 }
