--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build": "coffee-build src -o lib"
   },
   "dependencies": {
-    "Promise": "aleclarson/Promise#2.2.1",
-    "Type": "aleclarson/Type#2.3.1",
-    "git-utils": "aleclarson/git-utils#1.2.0"
+    "@cush/git-utils": "^2.0.0"
   },
   "devDependencies": {
     "coffeescript": "^2.3.0"
